--- a/frontend/src/pages/addPage/add.scss
+++ b/frontend/src/pages/addPage/add.scss
@@ -28,6 +28,10 @@
                         height: 100%;
                     }
                 }
+
+                td {
+                    padding: 10px;
+                }
             }
         }
     }
