--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -3,10 +3,11 @@ nav {
     top: 0;
     background-color: white;
     z-index: 10000;
-    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
+    // -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
+    // -moz-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
+    // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
 
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2); 
     .container-nav {
         max-width: 1140px;
         padding: 20px 20px;
