everything except 1 section

--- a/frontend/src/pages/addPage/add.scss
+++ b/frontend/src/pages/addPage/add.scss
@@ -8,10 +8,16 @@
         flex-direction: column;
         width: 50%;
         gap: 20px;
+        margin-bottom: 50px;
 
         .error {
             color: red;
         }
+    }
+
+    button {
+        padding: 5px;
+        margin: 5px;
     }
 
     table {
